<resources>
    <string name="app_name">Hömma</string>
    <string name="select_icon">Select Icon</string>
    <string-array name="icon_colors">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>magenta</item>
        <item>black</item>
    </string-array>
    <string name="filter">filter</string>
    <string name="ok_short">ok</string>
    <string name="cancel_short">cancel</string>
    <string name="id">ID</string>
    <string name="dash">-</string>
    <string name="info">Info</string>
    <string name="icon">Icon</string>
    <string name="xf2b9"></string>
    <string name="mp3">mp3</string>
    <string name="please_select">- please select -</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="search">search</string>
    <string name="random">random</string>
    <string name="settings">settings</string>
    <string name="reset_sounds">Reset sounds</string>
    <string name="reset_sounds_long">Reset all sounds like right after app installation.</string>
    <string name="reset_sounds_key">reset_sounds</string>
    <string name="manage_boards_key">manage_boards_key</string>
    <string name="manage_boards_summary">Create boards, select them, exports</string>
    <string name="select">select</string>
    <string name="exportieren">export</string>
    <string name="manage_boards">Manage boards</string>
    <string name="name">Name</string>
    <string name="active">Active</string>
</resources>