<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/reset_sounds"
        android:key="@string/reset_sounds_key"
        android:summary="@string/reset_sounds_long"
        android:icon="@drawable/ic_power_off_solid"
        android:iconTint="@color/iconSecondaryColor"
        app:allowDividerBelow="true"
        />
    <Preference
        android:title="@string/manage_boards"
        android:key="@string/manage_boards_key"
        android:summary="@string/manage_boards_summary"
        android:icon="@drawable/ic_clipboard_list_solid"
        android:iconTint="@color/iconSecondaryColor"
        app:allowDividerAbove="true"
        />

</androidx.preference.PreferenceScreen>