<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_activate"
        android:title="@string/select"
        android:icon="@android:drawable/ic_menu_set_as"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_item_export"
        android:title="@string/exportieren"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_item_sound_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_item_delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"
        />
</menu>