<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="80"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/board_name"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:layout_gravity="center_vertical"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="80"
                android:layout_height="wrap_content"
                android:id="@+id/board_active"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:paddingTop="32dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_short"
                android:id="@+id/board_cancel"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/board_save"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>