<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="20"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/id"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="80"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:textStyle="bold"
                        android:id="@+id/detail_id"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="20"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:layout_gravity="center_vertical"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="80"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/detail_description"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="20"
                        android:layout_height="wrap_content"
                        android:text="@string/icon"
                        android:layout_gravity="center_vertical"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="wrap_content"
                        android:text="@string/xf2b9"
                        android:textSize="32dp"
                        android:id="@+id/icon_display"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="15"
                        android:layout_height="wrap_content"
                        android:text="@string/mp3"
                        android:layout_gravity="center_vertical"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="wrap_content"
                        android:text="@string/please_select"
                        android:id="@+id/file_uri_display"
                        android:layout_gravity="center_vertical"/>
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_weight="15"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_save"
                        android:id="@+id/detail_file"/>
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_weight="15"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_btn_speak_now"
                        android:tint="@color/colorRecordInactive"
                        android:id="@+id/record_button"/>
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_weight="15"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_more"
                        android:tint="@color/black"
                        android:id="@+id/default_select_button"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal"
                    android:gravity="right"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="30"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        android:orientation="horizontal"
                        android:id="@+id/detail_mediaplayer"
                        >
                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_weight="50"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_media_play"
                            android:id="@+id/detail_play_pause"
                            />
                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_weight="50"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_media_rew"
                            android:id="@+id/detail_stop"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:paddingTop="32dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_short"
                android:id="@+id/detail_cancel"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/detail_save"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>