<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <EditText
        android:id="@+id/filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/icons"
        app:layout_constraintRight_toLeftOf="@id/choose_color"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/filter"
        android:maxLines="1"
        >
    </EditText>
    <Spinner
        android:id="@+id/choose_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/icons"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/filter"
        android:entries="@array/icon_colors"
        />
<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/icons"
        app:layout_constraintTop_toBottomOf="@id/filter"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"/>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/buttons"
        android:weightSum="100"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_short"
            android:id="@+id/ok_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_short"
            android:id="@+id/cancel_button"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>